# budgeting_dashboard

./: .gitignore  DESIGN.md  LICENSE  LICENSE.md  PRODUCT.md  README.md  start_backend.ps1  ui-audit-2026-05-31.md
.github/workflows/: ci.yml
docs/: feature-and-growth-proposal.md
docs/backend/: README.md
docs/database/: README.md
docs/endpoints/: endpoints.md  schemas.md
docs/frontend/: README.md
scripts/: refresh_exchange_rates.py  start.ps1  start_backend.ps1  start_frontend.ps1
src/backend/: .dockerignore  .env.example  API_DOCUMENTATION.md  DEPLOYMENT.md  Dockerfile  __init__.py  auth.py  backend_server.py  mypy.ini  pyproject.toml  requirements.txt  start.ps1
src/backend/auth/: auth.py
src/backend/data/: database.py
src/backend/helper/: __init__.py  columns.py  environment.py  exchange_rates.py  rate_limiter.py
src/backend/helper/calculations/: __init__.py  accounts_calc.py  budgets_calc.py  monthly_page_calc.py  net_worth_calc.py  profile_page_calc.py  savings_funds_calc.py  summary_calc.py  yearly_page_calc.py
src/backend/routers/: accounts.py  all_data_router.py  budgets.py  categories.py  dividends.py  export.py  login.py  month.py  monthly_analytics.py  net_worth.py  profile.py  recurring.py  savings_funds.py  summary.py  token_refresh.py  transactions.py  yearly_analytics.py  years.py
src/backend/schemas/: base.py  endpoint_schemas.py  requests.py  responses.py  yearly_schemas.py
src/backend/tests/: manual.py  test_schemas.py  test_unit_calculations.py
src/db/: categories_migration.sql  dividend_portfolio_migration.sql  edge_function_refresh_exchange_rates.ts  exchange_rates_migration.sql  fk_migration.sql  recurring_transactions_migration.sql
src/frontend/: .env.example  API_ENDPOINTS.md  index.html  main.py  package-lock.json  package.json  pages.md  requirements.txt  tailwind.config.ts  vite.config.ts
src/frontend/assets/: buttons.css
src/frontend/assets/login/: PP_tab.css  ToS_tab.css  forgot_pass_tab.css  login_tab.css  register_tab.css
src/frontend/assets/root/: app.css  buttons.css  mobile-nav.js  navigation.css
src/frontend/assets/tabs/: accounts_tab.css  calculators_tab.css  common.css  modals.css  monthly_view_tab.css  overview_tab.css  profile_tab.css  transactions_tab.css  yearly_view_tab.css
src/frontend/components/: add_account_modal.py  add_transaction_modal.py  edit_account_modal.py  edit_transaction_modal.py  navigation.py
src/frontend/helper/: api_client.py  auth_helpers.py  environment.py  login_request.py  validation.py
src/frontend/helper/calc/: investment_calculator.py
src/frontend/helper/requests/: accounts_request.py  categories_request.py  login_request.py  monthly_analytics_request.py  overview_request.py  profile_request.py  refresh_request.py  register_request.py  savings_funds_request.py  transactions_request.py  yearly_analytics_request.py  yearly_summary_request.py
src/frontend/pages/: dashboard.py  login.py  login_page.py
src/frontend/pages/login_tabs/: PP_tab.py  ToS_tab.py  forgot_pass_tab.py  login_tab.py  register_tab.py
src/frontend/pages/tabs/: accounts.py  budget.py  calculators.py  monthly_view.py  overview.py  profile.py  saving.py  transactions.py  yearly_view.py
src/frontend/public/: manifest.json
src/frontend/src/: App.tsx  index.css
src/frontend/src/components/auth/: AuthLayout.tsx
src/frontend/src/components/effects/: ParticleWave.tsx
src/frontend/src/components/layout/: AppSidebar.tsx  BottomNav.tsx  DashboardLayout.tsx  PullToRefresh.tsx  Topbar.tsx  UserNav.tsx
src/frontend/src/components/performance/: DeferredRender.tsx
src/frontend/src/components/privacy/: SensitiveValue.tsx
src/frontend/src/components/skeletons/: AnalyticsSkeleton.tsx  BudgetMakerSkeleton.tsx  DashboardSkeleton.tsx  GenericSkeletons.tsx  index.ts
src/frontend/src/components/ui/: alert-dialog.tsx  badge.tsx  button-variants.ts  button.tsx  dialog.tsx  drawer.tsx  empty-state.tsx  form.tsx  kpi-card.tsx  navigation-menu.tsx  page-header.tsx  sheet.tsx  sidebar-context.tsx  sidebar.tsx  sonner.tsx  toast.tsx  toggle.tsx
src/frontend/src/contexts/: AuthContext.tsx  PrivacyContext.tsx  UserContext.tsx  auth-context.ts  privacy-context.ts  user-context.ts
src/frontend/src/data/: demo-data.ts
src/frontend/src/hooks/: use-mobile.tsx  use-url-state.ts
src/frontend/src/lib/: chart-colors.ts  currency.ts  i18n.ts  user-avatar.ts  utils.ts
src/frontend/src/lib/api/: client.ts  types.ts
src/frontend/src/pages/: AboutPage.tsx  DemoPage.tsx  FaqPage.tsx  HowItWorksPage.tsx  LandingPage.tsx  NotFound.tsx  PrivacyPage.tsx  TermsPage.tsx
src/frontend/src/pages/auth/: AuthCallbackPage.tsx  ForgotPasswordPage.tsx  LoginPage.tsx  RegisterPage.tsx  ResetPasswordPage.tsx
src/frontend/utils/: colors.py  currency.py  data_manager.py  tabs.py  theme.py
src/tests/backend/: apis.py  conftest.py  debug_calc_direct.py  debug_funds.py  main.py  manual_tests.py  requirements.txt  test_backend.py  verification_calc.py  verify_balances.py
supabase/: config.toml
supabase/functions/refresh-exchange-rates/: index.ts
supabase/migrations/: 20260701000000_baseline.sql  20260701120000_hello_migration_test.sql  20260701130000_insert_test_row.sql
(+32 files in other folders)
