[project]
name = "budgeting-backend"
version = "0.1.0"
description = "Budgeting Dashboard Backend API"
readme = "API_DOCUMENTATION.md"
requires-python = ">=3.9"
dependencies = [
    # FastAPI and server dependencies
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    
    # Environment variable management
    "python-dotenv==1.0.0",
    
    # JWT token handling
    "PyJWT==2.8.0",
    
    # Supabase client for database operations
    "supabase==1.0.4",
    
    # Data validation and serialization
    "pydantic>=2.0.0",
    
    # HTTP client (dependency of supabase)
    "httpx>=0.24.0",
    
    # Form data handling
    "python-multipart==0.0.6",
    
    # Data manipulation
    "pandas>=2.2.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"